Updated link updater